--- a/index.html
+++ b/index.html
@@ -127,6 +127,25 @@
 
     <section id="guarantee" class="section section-tight">
       <div class="container">
+        <article class="guarantee-offer">
+          <h2>Win Your Money Back <span class="text-trust offer-note">(never before)</span></h2>
+          <p><strong>Prove progress. Earn it back.</strong></p>
+          <p>Join the 3‑month Breakthrough Programme from The Academy and <strong>win 100% of your money back</strong> by the end if you meet three simple goals:</p>
+          <ul class="bullets">
+            <li>Complete every home practical on time</li>
+            <li>Attend all lessons (1 reschedule per month allowed, no cancellations)</li>
+            <li>Gain <strong>+1 grade</strong> at one of your college's assessments</li>
+          </ul>
+          <p>Show discipline, make progress, and you will finish stronger. For free.</p>
+          <p><strong>Book Consult</strong> to start. It takes little time, no commitment, and could lead to your best results yet.</p>
+        </article>
+      </div>
+    </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
+
+    <section id="classic-story" class="section section-tight">
+      <div class="container">
         <h2>C -> A in 8 Weeks</h2>
         <article class="case-story">
           <h3 class="case-story__section-title">April 2025</h3>
@@ -198,148 +217,6 @@
 
     <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
-
-    <div class="delimiter delimiter--section" aria-hidden="true"></div>
-
-    <section id="progress" class="section">
-      <div class="container">
-        <h2>Progress tracking</h2>
-        <p class="eyebrow">Progress tracker</p>
-        <p class="kicker">We log 5 indicators weekly and send parents a 3-line summary with a tracker screenshot.</p>
-        <div class="tracker-sample">
-          <div class="tracker-table-wrap" role="group" aria-label="Sample weekly tracker table">
-            <table class="tracker-table">
-              <thead>
-                <tr>
-                  <th scope="col" class="tracker-topic">Assessment</th>
-                  <th scope="col" class="tracker-time">Allowed (min)</th>
-                  <th scope="col" class="tracker-time">Actual (min)</th>
-                  <th scope="col" class="tracker-rowtype">Parameter</th>
-                  <th scope="col">Q1</th>
-                  <th scope="col">...</th>
-                  <th scope="col">Q10</th>
-                  <th scope="col">Total</th>
-                  <th scope="col">Attempted</th>
-                  <th scope="col">Max</th>
-                  <th scope="col">Coverage</th>
-                  <th scope="col">Conversion</th>
-                  <th scope="col">Score</th>
-                  <th scope="col">Speed</th>
-                  <th scope="col">Focus</th>
-                  <th scope="col">Notes</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="rowgroup" rowspan="8" class="tracker-test">Diagnostic -<br><span>24/09/2025</span></th>
-                  <td rowspan="8" class="tracker-time"><span>47</span></td>
-                  <td rowspan="8" class="tracker-allowed"><span>40</span></td>
-                  <th scope="row" class="tracker-rowtype">Marks</th>
-                  <td class="tracker-q">9</td>
-                  <td class="tracker-q is-empty"></td>
-                  <td class="tracker-q">6</td>
-                  <td class="tracker-total" rowspan="8"><strong>58</strong></td>
-                  <td class="tracker-attempted" rowspan="8"><strong>66</strong></td>
-                  <td class="tracker-max" rowspan="8"><strong>70</strong></td>
-                  <td class="tracker-coverage" rowspan="8"><strong>94%</strong></td>
-                  <td class="tracker-conversion" rowspan="8"><strong>88%</strong></td>
-                  <td class="tracker-score" rowspan="8"><strong>83%</strong></td>
-                  <td class="tracker-speed" rowspan="8"><strong>65%</strong></td>
-                  <td class="tracker-focus" rowspan="8"><strong>89%</strong></td>
-                  <td class="tracker-notes" rowspan="8">
-                    <ol class="tracker-notes-list">
-                      <li>Revisit completion loops at start of every proof.</li>
-                      <li>Improve coverage: 2 unseen recursion questions assigned.</li>
-                      <li>Speed work: timed drill on maths sequences.</li>
-                    </ol>
-                  </td>
-                </tr>
-                <tr>
-                  <th scope="row" class="tracker-rowtype">Max</th>
-                  <td class="tracker-q">10</td>
-                  <td class="tracker-q is-empty"></td>
-                  <td class="tracker-q">6</td>
-                </tr>
-                <tr>
-                  <th scope="row" class="tracker-rowtype">Careless</th>
-                  <td class="tracker-q">1</td>
-                  <td class="tracker-q is-empty"></td>
-                  <td class="tracker-q">0</td>
-                </tr>
-                <tr>
-                  <th scope="row" class="tracker-rowtype">Attempted</th>
-                  <td class="tracker-q">10</td>
-                  <td class="tracker-q is-empty"></td>
-                  <td class="tracker-q">6</td>
-                </tr>
-                <tr>
-                  <th scope="row" class="tracker-rowtype">Lapsed (s)</th>
-                  <td class="tracker-q">270</td>
-                  <td class="tracker-q is-empty"></td>
-                  <td class="tracker-q">2800</td>
-                </tr>
-                <tr>
-                  <th scope="row" class="tracker-rowtype">Duration (s)</th>
-                  <td class="tracker-q">270</td>
-                  <td class="tracker-q is-empty"></td>
-                  <td class="tracker-q">370</td>
-                </tr>
-                <tr>
-                  <th scope="row" class="tracker-rowtype">Speed per Q</th>
-                  <td class="tracker-q">1.08</td>
-                  <td class="tracker-q is-empty"></td>
-                  <td class="tracker-q">0.47</td>
-                </tr>
-                <tr>
-                  <th scope="row" class="tracker-rowtype">Topic</th>
-                  <td class="tracker-topic">Algebraic manipulation and factorisation</td>
-                  <td class="tracker-topic tracker-topic--spacer"></td>
-                  <td class="tracker-topic">Binomial expansion and coefficients</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <p class="note">Diagnostic tracker sample: timing, accuracy, and next actions in one view.</p>
-        </div>
-        <div class="sla">
-          <h3>Service level</h3>
-          <ul class="bullets">
-            <li>Update and summary sent by 22:00 on lesson day.</li>
-            <li>Messages 08:00–20:00 replied under 60 minutes.</li>
-            <li>Reschedule requests in hours above confirmed within 15 minutes.</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <div class="delimiter delimiter--section" aria-hidden="true"></div>
-
-    <section id="how" class="section">
-      <div class="container">
-        <h2>How it works</h2>
-        <ol class="steps">
-          <li><strong>Consult – 20 min, no charge.</strong> Goals and exam board.</li>
-          <li><strong>Diagnostic – 60 min, £30 credited.</strong> You get the tracker baseline.</li>
-          <li><strong>Weekly 90 min.</strong> Same slot, measurable progress.</li>
-        </ol>
-        <p class="note"><strong>Ramp-up policy</strong>: first 2 lessons are a fit check. If it is not right, we stop cleanly.</p>
-      </div>
-    </section>
-
-    <div class="delimiter delimiter--section" aria-hidden="true"></div>
-
-    <section id="pricing" class="section section-tight">
-      <div class="container">
-        <h2>Pricing</h2>
-        <div class="price-list">
-          <div class="price-item"><strong>Diagnostic</strong> – £30 – credited to month 1</div>
-          <div class="price-item"><strong>Monthly retainer</strong> – £360 – weekly 90 min – 12 week minimum</div>
-        </div>
-        <p class="note">Under 24 h cancellations are charged. One make-up per term with 24 h notice, subject to availability.</p>
-      </div>
-    </section>
-
-    <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
     <section id="faq" class="section">
       <div class="container">
