--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div class="cta">
               <a class="btn-primary" data-consult-link href="https://calendly.com/csprime/consult-free-diagnostic" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
-              <div class="cta-sub">No charge • 20 min</div>
+              <div class="cta-sub">Free • 20 min</div>
             </div>
           </div>
 
@@ -217,31 +217,43 @@
 
     <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
-
-    <section id="faq" class="section">
+    <section id="pricing" class="section section-tight">
       <div class="container">
-        <h2>FAQ</h2>
-        <details><summary>Do you set homework</summary><p>Yes. Short drills tied to weak topics. 60–90 minutes per week.</p></details>
-        <details><summary>Which boards</summary><p>Edexcel, OCR, AQA. We map work to the spec line by line.</p></details>
-        <details><summary>What tools do you use</summary><p>Zoom, OneNote or Miro, Excel tracker shared as screenshots each week.</p></details>
-        <details><summary>Can we reschedule</summary><p>With 24 h notice within the term, subject to availability. Under 24 h is charged.</p></details>
-        <details><summary>Parent visibility</summary><p>You get a weekly note and tracker screenshot after each lesson.</p></details>
+        <h2>How Much Do You Charge?</h2>
+        <p class="kicker">Every student has to go through the following:</p>
+        <ol class="steps">
+          <li><strong>Consult</strong> — free, no commitment, 20 min.</li>
+          <li><strong>Diagnostic</strong> — £50, 60 min.</li>
+          <li><strong>Core package</strong> — £480/month. Main benefits include:
+            <ul class="bullets">
+              <li>weekly 90 min lessons,</li>
+              <li>weekly home practical sets, marked,</li>
+              <li>post-lesson parent feedback,</li>
+              <li>biweekly in-lesson mock set performance tracking with 5 indicators and progress report,</li>
+              <li>and much more… you can learn about all benefits during the consult.</li>
+            </ul>
+          </li>
+        </ol>
+        <p class="note">Too good to be true? That’s why we only have 4 seats.</p>
+        <p><strong>Book Consult</strong> today before the availability ends.</p>
       </div>
     </section>
 
     <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
+    <section id="bonus" class="section section-tight">
+      <div class="container">
+        <h2>Bonus</h2>
+        <p>We understand that our program is not for everyone. To ensure you are happy: <strong>at any time you can make a full refund of ALL the money you’ve paid and leave The Breakthrough Programme</strong>.</p>
+      </div>
+    </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
+
+
     <section id="testimonials" class="section section-tight">
       <div class="container">
         <h2>Testimonials</h2>
-        <figure class="quote">
-          <blockquote>Philipp rebuilt my algebra and timing. Paper scores went from mid C to solid A.</blockquote>
-          <figcaption>Parent, Year 13, Edexcel Maths</figcaption>
-        </figure>
-        <figure class="quote">
-          <blockquote>Clear structure, no fluff, fast feedback. The weekly tracker made progress obvious.</blockquote>
-          <figcaption>Student, Year 12, Physics</figcaption>
-        </figure>
       </div>
     </section>
   </main>
