--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>CS Prime Academy – The Breakthrough Programme</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Premium A Level Computer Science tutoring engineered for measurable mastery.">
+  <meta name="description" content="Premium A-Level Computer Science tutoring engineered for measurable mastery.">
   <meta name="theme-color" content="#c65a72">
 
   <!-- Fonts -->
@@ -41,7 +41,7 @@
     <div class="hero-inner">
       <div class="hero-left">
         <p class="track-overline">CS Prime Academy — serious tuition for serious results.</p>
-        <h2 class="hero-title">The Breakthrough Programme<br>A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
+        <h2 class="hero-title">The Breakthrough Programme<br>A-Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
         <ul class="hero-proof-list">
           <li class="hero-proof-item">
             <span class="hero-guarantee-banner">ACHIEVE +1 GRADE IN 3 MONTHS TO WIN 100% MONEY BACK</span>
@@ -65,16 +65,18 @@
             </div>
           </div>
 
-          <aside class="cta-offer" aria-label="Special offer details">
-            <div class="cta-offer__body">
-              <p class="cta-offer__eyebrow">SPECIAL OFFER – 98% OFF</p>
-              <p class="cta-offer__copy">Book your free consult within 24hrs to get the <span class="text-mulberry">£50 Diagnostic for £1.</span></p>
-            </div>
-            <div class="cta-offer__timer" aria-hidden="true"></div>
-          </aside>
+          <div class="cta-offer-stack">
+            <aside class="cta-offer" aria-label="Special offer details">
+              <div class="cta-offer__body">
+                <p class="cta-offer__eyebrow">SPECIAL OFFER – 98% OFF</p>
+                <p class="cta-offer__copy">Book your free consult within 24hrs to get the <span class="text-mulberry">£50 Diagnostic for £1 ONLY!</span></p>
+              </div>
+              <div class="cta-offer__timer" aria-hidden="true"></div>
+            </aside>
 
-          <div class="cta-offer__timer cta-offer__timer--mobile" role="status" aria-live="polite">
-            <span class="cta-offer__countdown" data-offer-countdown>24:00:00</span>
+            <div class="cta-offer__timer cta-offer__timer--mobile" role="status" aria-live="polite">
+              <span class="cta-offer__countdown" data-offer-countdown>24:00:00</span>
+            </div>
           </div>
 
           <aside class="cta-offer-floating" aria-label="Special offer countdown">
@@ -126,7 +128,7 @@
           <div class="fit-group">
             <h3>Who we ARE looking for:</h3>
             <ul class="bullets">
-              <li>A Level OCR/AQA Computer Science</li>
+              <li>A-Level OCR/AQA Computer Science</li>
               <li>Aiming for A*/A</li>
               <li>Need reliable outcomes</li>
               <li>Want to improve your grades fast</li>
@@ -257,7 +259,7 @@
           <figure class="hero-testimonial">
             <div class="hero-testimonial__header">
               <img class="hero-testimonial__media" src="/assets/people-photos/anonymous-256.png" alt="Vivian Yeung — parent" width="112" height="112" loading="lazy">
-              <p class="hero-testimonial__name">Vivian Y. — another happy mum, finally relieved about A Level grades</p>
+              <p class="hero-testimonial__name">Vivian Y. — another happy mum, finally relieved about A-Level grades</p>
             </div>
             <blockquote class="hero-testimonial__quote quote-simple quote-simple--compact">
               <p>Philipp is a very responsible, committed and skilful tutor. He taught my daughter for math. He quickly understand my daughter weaknesses and strength so as to design different techniques to suit her personally to deal with her problems in the subject. And, he tailor-made different techniques and use different types of questions to ensure her to pick up the key points and know how to tackle the questions easily. He is a very patient and always encourages the students so that they are eager to learn and can have sharp improvement in a short period of time.</p>
