--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   <link rel="stylesheet" href="/assets/styles.css">
 
-  <link rel="preload" as="image" href="/assets/people-photos/philipp-1200.avif" type="image/avif"
-        imagesrcset="/assets/people-photos/philipp-800.avif 800w, /assets/people-photos/philipp-1200.avif 1200w, /assets/people-photos/philipp-1800.avif 1800w"
+  <link rel="preload" as="image" href="/assets/people-photos/philipp-1600.avif" type="image/avif"
+        imagesrcset="/assets/people-photos/philipp-1600.avif 1600w"
         imagesizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
 </head>
 <body class="page-cs">
@@ -102,10 +102,11 @@
 
         <figure class="hero-portrait">
           <picture>
-            <!-- <source type="image/avif" srcset="/assets/people-photos/philipp-800.avif 800w, /assets/people-photos/philipp-1200.avif 1200w, /assets/people-photos/philipp-1800.avif 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)"> -->
-            <!--<source type="image/webp" srcset="/assets/people-photos/philipp-800.webp 800w, /assets/people-photos/philipp-1200.webp 1200w, /assets/people-photos/philipp-1800.webp 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)"> -->
-            <!--<img src="/assets/people-photos/philipp-1200.webp" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high"> -->
-            <img src="/assets/people-photos/philipp.png" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high">
+            <source
+              type="image/avif"
+              srcset="/assets/people-photos/philipp-1600.avif 1600w"
+              sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
+            <img src="/assets/people-photos/philipp-1600.avif" alt="Philipp Bogdan" width="1600" height="1600" loading="eager" fetchpriority="high">
           </picture>
           <figcaption class="hero-portrait__caption">Philipp – Reach Your Prime</figcaption>
         </figure>
