--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
     </div>
 
-    <a class="scroll-cue" href="#guarantee" aria-label="Scroll for more">
+    <a class="scroll-cue" href="#fit" aria-label="Scroll to Are You a Fit? section">
       <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M6.7 9.3a1 1 0 0 1 1.4 0L12 13.2l3.9-3.9a1 1 0 1 1 1.4 1.4l-4.6 4.6a1 1 0 0 1-1.4 0L6.7 10.7a1 1 0 0 1 0-1.4z"/></svg>
     </a>
   </section>
@@ -129,8 +129,9 @@
           <div class="fit-group">
             <h3>Who we ARE looking for:</h3>
             <ul class="bullets">
-              <li>A-Level OCR/AQA Computer Science</li>
-              <li>Aiming for A*/A</li>
+              <li>OCR or AQA A-Level Computer Science</li>
+              <li>Aiming for A*</li>
+              <li>Aspiring to Imperial or Oxbridge</li>
               <li>Need reliable outcomes</li>
               <li>Want to improve your grades fast</li>
               <li>Interested in AI or ML<span class="fit-footnote-marker" aria-hidden="true">*</span></li>
@@ -158,10 +159,9 @@
           <p><strong>Prove progress. Earn it back.</strong></p>
           <p>Join the 3‑month Breakthrough Programme from The Academy and <strong>win 100% of your money back</strong> by the end if you meet three simple goals:</p>
           <ul class="bullets">
-            <li>Gain <strong>+1 grade</strong> at one of your college's assessments (or internal)</li>
+            <li>Gain <strong>+1 grade</strong> at one of your college's assessments</li>
             <li>Complete every home practical on time</li>
             <li>Attend all lessons (1 reschedule per month allowed, no cancellations)</li>
-            <li>Attend all monthly progress check meetings</li>
           </ul>
           <p>Show discipline, make progress, and you will finish stronger. For free.</p>
           <p><strong>Book Consult</strong> to start. It takes little time, no commitment, and could lead to your best results yet.</p>
