--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
                 <p>After three weeks, the results started to show: <strong>+10%</strong> on the average score. Confidence followed. Answers became structured, timing steadier, corrections rarer.</p>
                 <p>We pushed into full papers, mixed-topic rotations, and calm repeatability. By week eight, timed scripts held at <strong>78%</strong>. June arrived. A-levels finished. The <strong>C</strong> became a <strong>strong A</strong>.</p>
                 <p>Parents had clarity. She had control. The dream university was back within reach.</p>
-                <p>Want the same for your child? <strong>Book Consult</strong>.</p>
-                <p>It takes little time, no commitment, and is free of charge — the first step towards bringing your child to their prime and learning how the Academy works. We will get a baseline, build the plan, and drive to A*.</p>
+                <p>Want the same? <strong>Book Consult</strong>.</p>
+                <p>It takes little time, no commitment, and is free of charge — the first step towards getting to your prime. We will get a baseline, build the plan, and drive to A*.</p>
                 <p><em>P.S. This case shows only our well known methods (techniques include: tracing substitution, mid-code debugging, explicit data typing, ...). Our top 0.1% advantages are proprietary to CS Prime Academy and exclusive to clients. You cannot find them anywhere else.</em></p>
               </div>
             </div>
