--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="hero-title">The Breakthrough Programme<br>A-Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h1>
         <ul class="hero-proof-list">
           <li class="hero-proof-item">
-            <span class="hero-guarantee-banner">ACHIEVE +1 GRADE IN 3 MONTHS TO WIN 100% MONEY BACK</span>
+            <span class="hero-guarantee-banner">Achieve +1 grade in 3 months and earn 100% of your fees back.</span>
           </li>
           <li class="hero-proof-item"><span class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</span></li>
           <li class="hero-proof-item"><span class="trust-hook">4×A* | Imperial College Computing (AI) |<br>Ranked Top 100 in the UK for CS A-Level</span></li>
@@ -72,7 +72,7 @@
             <aside class="cta-offer" aria-label="Special offer details">
               <div class="cta-offer__body">
                 <p class="cta-offer__eyebrow">SPECIAL OFFER – 99% OFF</p>
-                <p class="cta-offer__copy">Book your free consult within 24hrs to get the <span class="text-mulberry">£100 Diagnostic for £1 ONLY!</span></p>
+                <p class="cta-offer__copy">Book your free consult within 24hrs to get the <span class="text-mulberry">£100 Diagnostic for £1 only.</span></p>
               </div>
               <div class="cta-offer__timer" aria-hidden="true"></div>
             </aside>
@@ -134,7 +134,7 @@
         <p class="fit-intro">The Breakthrough Programme is not for everyone.</p>
         <div class="fit-grid">
           <div class="fit-group">
-            <h3>Who we ARE looking for:</h3>
+            <h3>Who we are looking for:</h3>
             <ul class="bullets">
               <li>OCR or AQA A-Level Computer Science</li>
               <li>Aiming for A*</li>
@@ -145,7 +145,7 @@
             </ul>
           </div>
           <div class="fit-group">
-            <h3>Who we ARE NOT looking for:</h3>
+            <h3>Who we are not looking for:</h3>
             <ul class="bullets">
               <li>Want to just pass</li>
               <li>“Grades will sort themselves out”</li>
