--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="hero-title">The Breakthrough Programme<br>A-Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h1>
         <ul class="hero-proof-list">
           <li class="hero-proof-item">
-            <span class="hero-guarantee-banner">Achieve +1 grade in 3 months and earn 100% of your fees back.</span>
+            <span class="hero-guarantee-banner">Achieve +1 grade in 3 months and earn 100% money back.</span>
           </li>
           <li class="hero-proof-item"><span class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</span></li>
           <li class="hero-proof-item"><span class="trust-hook">4×A* | Imperial College Computing (AI) |<br>Ranked Top 100 in the UK for CS A-Level</span></li>
